version/0.12/_sources/api/solver/_autosummary/settings/windows.rst.txt
:orphan:

.. _windows:

windows
=======

.. currentmodule:: ansys.fluent.core.solver.settings_231.windows

.. autoclass:: windows
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==============================   =============================================================

Child                                                                                  Summary

==============================   =============================================================
:ref:`axes <axes_2>`                                       Enter the axes window options menu.

:ref:`main <main>`                                    Enter the main view window options menu.

:ref:`scale <scale_3>`                              Enter the color scale window options menu.

:ref:`text <text>`                                         Enter the text window options menu.

:ref:`video <video>`                                      Enter the video window options menu.

:ref:`xy <xy>`                                         Enter the X-Y plot window options menu.

:ref:`logo <logo>`                   Enable/disable visibility of the logo in graphics window.

:ref:`ruler <ruler_1>`                                        Enable/disable ruler visibility.

:ref:`logo_color <logo_color>`                                  Set logo color to white/black.

==============================   =============================================================

.. rubric:: Commands

==================================   ==============================================

Command                                                                     Summary

==================================   ==============================================
:ref:`aspect_ratio <aspect_ratio>`       Set the aspect ratio of the active window.

==================================   ==============================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

