version/0.20/_sources/api/solver/_autosummary/settings/windows.rst.txt
:orphan:

.. _windows:

windows
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.windows.windows
    :show-inheritance:

.. rubric:: Attributes

==============================   =============================================================

Attribute                                                                              Summary

==============================   =============================================================
:ref:`axes <axes_3>`                                       Enter the axes window options menu.

:ref:`main <main>`                                    Enter the main view window options menu.

:ref:`scale <scale_5>`                              Enter the color scale window options menu.

:ref:`text <text_1>`                                       Enter the text window options menu.

:ref:`video <video>`                                      Enter the video window options menu.

:ref:`xy <xy>`                                         Enter the X-Y plot window options menu.

:ref:`logo <logo>`                   Enable/disable visibility of the logo in graphics window.

:ref:`ruler <ruler_1>`                                        Enable/disable ruler visibility.

:ref:`logo_color <logo_color>`                                  Set logo color to white/black.

==============================   =============================================================

.. rubric:: Methods

==================================================   =======================================================================

Method                                                                                                               Summary

==================================================   =======================================================================
:ref:`aspect_ratio <aspect_ratio>`                                                Set the aspect ratio of the active window.

:ref:`open_window <open_window>`                                                                Open a user graphics window.

:ref:`set_window <set_window>`                                           Set a user graphics window to be the active window.

:ref:`set_window_by_name <set_window_by_name>`           Set a reserved graphics window to be the active window by its name.

:ref:`close_window <close_window>`                                                             Close a user graphics window.

:ref:`close_window_by_name <close_window_by_name>`                             Close a reserved graphics window by its name.

==================================================   =======================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

